--- a/PoC/GoogleService-Info.plist
+++ b/PoC/GoogleService-Info.plist
@@ -2,27 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>497051166500-udpj73v2i9dgqorbat5p38j3bsvgts1h.apps.googleusercontent.com</string>
+	<string>285446621350-5ofk6g8n8ankp7o1hhi2vj1908scjnml.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.497051166500-udpj73v2i9dgqorbat5p38j3bsvgts1h</string>
+	<string>com.googleusercontent.apps.285446621350-5ofk6g8n8ankp7o1hhi2vj1908scjnml</string>
+	<key>API_KEY</key>
+	<string>AIzaSyA6yAPi8mlZxrIBM15d5DsVYuFpF1BMT8M</string>
+	<key>GCM_SENDER_ID</key>
+	<string>285446621350</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>Logos.PoC</string>
+	<string>com.google.firebase.udacity.FriendlyChat</string>
 	<key>PROJECT_ID</key>
-	<string>logos-poc</string>
+	<string>friendlychat-23cd4</string>
+	<key>STORAGE_BUCKET</key>
+	<string>friendlychat-23cd4.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<false></false>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:497051166500:ios:38dcc984f24790ca</string>
+	<string>1:285446621350:ios:235cb6831fc61c4c</string>
+	<key>DATABASE_URL</key>
+	<string>https://friendlychat-23cd4.firebaseio.com</string>
 </dict>
 </plist>
